--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "chart.js": "^2.7.3",
+    "vue-chartjs": "^3.4.0",
     "vue-i18n": "^7.3.3"
   },
   "devDependencies": {
