--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "electron": "^3.0.8",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "^2.2.4",
+    "node-sass": "^4.10.0",
     "quasar-cli": "^0.17.0",
+    "sass-loader": "^7.1.0",
     "strip-ansi": "=3.0.1"
   },
   "engines": {
