--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   "author": "vladimirjv <ivladimirjuarez@outlook.com>",
   "private": true,
   "scripts": {
-    "test": "echo \"No test specified\" && exit 0"
+    // "test": "echo \"No test specified\" && exit 0",
+    "build": "quasar build",
+    "start": "node server.js",
+    "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
+    "connect-history-api-fallback": "^1.5.0",
+    "express": "^4.16.4",
+    "serve-static": "^1.13.2",
     "vue-chartjs": "^3.4.0",
     "vue-i18n": "^7.3.3"
   },
